--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ jobs:
         tags: true
         repo: digitalocean/doctl
 
-  - if: branch=master and type=push
+  - if: branch=main and type=push
     script:
     - echo "building snap"
     - make _build_snap
